Closed Bug 582424 Opened 14 years ago Closed 14 years ago

TM: JSRopeNodeIterator warning

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: gwagner, Assigned: gwagner)

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file, 1 obsolete file)

Whenever I use the JSRopeNodeIterator I get a warning like:
..... warning: ‘iter.JSRopeNodeIterator::mUsedFlags’ may be used uninitialized in this function
..... note: ‘iter.JSRopeNodeIterator::mUsedFlags’ was declared here
Attached patch fix (obsolete) — Splinter Review
Assignee: general → anygregor
Status: NEW → ASSIGNED
Sorry about that. I'm not getting the same warning on my machine, so it must be configuration-specific.

Your fix works. You can also remove the "mUsedFlags = 0;" line in JSRopeNodeIterator::init and change it to "JS_ASSERT(mUsedFlags == 0);".
Attached patch patchSplinter Review
It only happens in the --enable-optimized shell.
Attachment #460697 - Attachment is obsolete: true
Attachment #460728 - Flags: review?(apierce)
Comment on attachment 460728 [details] [diff] [review]
patch

Thanks for fixing this.
Attachment #460728 - Flags: review?(apierce) → review+
Whiteboard: fixed-in-tracemonkey
http://hg.mozilla.org/mozilla-central/rev/77ebf0c91e8d
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: