Bug 582424 - TM: JSRopeNodeIterator warning (r=apierce)